# yinghuo-openlabel

./: .dockerignore  .gitignore  README.en.md  README.md  README_EN.md  README_en.md
services/web-api/: .env  .gitignore  .pdm-python  Dockerfile  pyproject.toml
services/web-api/config/: yinghuo.yaml
services/web-api/src/openlabel/: __init__.py  openlabel.py  version.py
services/web-api/src/openlabel-specs/intelligent-driving/: ol_aabb2d_1.0.1_zh-CN.json  ol_nuplan_map.json  ol_nuscenes-lidarseg_1.0.0_zh-CN.json  ol_road_objects_simple_1.0.0_zh-CN.json  ol_traffic-light_1.0.1_zh-CN.json  ol_video-event_0.1.0_zh-CN.json
services/web-api/src/openlabel-specs/medical-ultrasound/: ol_benign-malignant_0.1.0_zh-CN.json  ol_breast-ultrasound-video-event_0.1.0_zh-CN.json
services/web-api/src/openlabel-specs/open-dataset/: coco_2017_en.json  pgl_av2-sensor-dataset-taxonomy-30-classes_1.0.1_En.json  pgl_av2-sensor-dataset-taxonomy-30-classes_1.0.1_zh-CN.json
services/web-api/src/openlabel/models/: api_model.py  openlabel.py  utils.py
services/web-api/src/yinghuo_app/: api_util.py  app.py  exceptions.py  log.py  main.py  redis_conf.py
services/web-api/src/yinghuo_app/algos/: __init__.py  algo_sets.py  pointcloud_algo.py  shapely_utils.py
services/web-api/src/yinghuo_app/apps/: algo_app.py  anno_job.py  anno_spec.py  auth.py  ctx.py  data_seq_app.py  dnn_app.py  file_app.py  files_app.py  init_app.py  label_app.py  medical_app.py  openpgl_app.py  system_app.py  (+5 more)
services/web-api/src/yinghuo_conf/: __init__.py  config_def.py  loader.py  models.py  singleton.py
services/web-api/src/yinghuo_utils/: http_utils.py  image_utils.py  io_utils.py  logging.py  vis_util.py
(+274 files in other folders)
